# krita

libs/flake/: KoCanvasController.h  KoCanvasControllerWidget.cpp
libs/ui/: KisMultiFeedRSSModel.cpp  KisWelcomePageWidget.cpp
libs/ui/canvas/: kis_canvas2.cpp  kis_canvas2.h  kis_canvas_controller.cpp  kis_coordinates_converter.cpp  kis_coordinates_converter.h  kis_qpainter_canvas.cpp
libs/ui/forms/: KisWelcomePage.ui
libs/ui/opengl/: kis_opengl_canvas2.cpp  kis_opengl_canvas2.h
libs/ui/tests/: kis_coordinates_converter_test.cpp  kis_prescaled_projection_test.cpp
libs/ui/widgets/: KisNewsWidget.cpp  KisNewsWidget.h
plugins/filters/pixelizefilter/: CMakeLists.txt  kis_pixelize_filter.cpp  krita_filter_pixelize_rs.hpp
plugins/filters/pixelizefilter/rust/: Cargo.toml
plugins/filters/pixelizefilter/rust/src/: image.rs  krita_ffi.rs  lib.rs  rect.rs
plugins/filters/pixelizefilter/rust/src/krita_ffi/: kis_sequential_iterators.rs
plugins/filters/tests/: CMakeLists.txt  kis_filter_pixelize_test.cpp  kis_filter_pixelize_test.h
